--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -44,17 +44,16 @@ RUN set -x \
     && git config --global http.postBuffer 524288000 \
     && npm install -g pnpm \
     && pnpm add -g pm2 ts-node typescript tslib \
+    && rm -rf /root/.pnpm-store \
+    && rm -rf /root/.local/share/pnpm/store \
+    && rm -rf /root/.cache \
+    && rm -rf /root/.npm
     && git clone -b ${QL_BRANCH} ${QL_URL} ${QL_DIR} \
     && cd ${QL_DIR} \
     && cp -f .env.example .env \
     && chmod 777 ${QL_DIR}/shell/*.sh \
     && chmod 777 ${QL_DIR}/docker/*.sh \
-    && pnpm install --prod \
-    && rm -rf /root/.pnpm-store \
-    && rm -rf /root/.local/share/pnpm/store \
-    && rm -rf /root/.cache \
-    && rm -rf /root/.npm \
-    && git clone -b ${QL_STATIC_BRANCH} https://github.com/${QL_MAINTAINER}/qinglong-static.git /static \
+    && git clone -b ${QL_BRANCH} https://github.com/${QL_MAINTAINER}/qinglong-static.git /static \
     && mkdir -p ${QL_DIR}/static \
     && cp -rf /static/* ${QL_DIR}/static \
     && rm -rf /static
